--- a/css/style.css
+++ b/css/style.css
@@ -23,4 +23,67 @@ body{
     position: relative;
     width: 400px;
     height: 400px;
+    appearance: none;
+    outline: none;
+    cursor: pointer;
+}
+
+span{
+    position: absolute;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    pointer-events: none;
+    transform-style: preserve-3d;
+}
+
+span.beach{
+    left: 0;
+    background: url(../img/beach.jpg);
+    background-size: cover;
+}
+
+span.beach::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(../img/desert.jpg);
+    transform-origin: right;
+    transition: 2s;
+    background-size: cover;
+    /* backface-visibility: hidden; */
+}
+
+.imgbx input[type="checkbox"]:checked ~ span.beach::before{
+    transform: rotateY(180deg);
+}
+
+span.desert{
+    right: 0;
+    background: url(../img/desert.jpg);
+    background-position-x: 200px;
+    background-size: cover;
+}
+
+span.desert::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(../img/beach.jpg);
+    background-position-x: 200px;
+    transform-origin: left;
+    transition: 2s;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+    background-size: cover;
+}
+
+.imgbx input[type="checkbox"]:checked ~ span.desert::before{
+    transform: rotateY(360deg);
 }
