--- a/css/style.css
+++ b/css/style.css
@@ -109,4 +109,27 @@ span.desert::before{
         height: 250px;
         width: 250px;
     }
+
+    span.desert{
+        right: 0;
+        background: url(../img/desert.jpg);
+        background-position-x: 125px;
+        background-size: cover;
+    }
+
+    span.desert::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url(../img/beach.jpg);
+        background-position-x: 125px;
+        transform-origin: left;
+        transition: 2s;
+        backface-visibility: hidden;
+        transform: rotateY(180deg);
+        background-size: cover;
+    }
 }
